Extract common functionality from copy and move methods (#3828)
* Extract common functionality from copy and move methods

* Tweaks and cleanup

* Guard against NPE

* Tweaks: don't add the repo to the cache again